# cv

./: .gitignore  CMakeLists.txt  CircuitClassifier.cpp  CircuitClassifier.hpp  ComponentClassifier.cpp  ComponentClassifier.hpp  DatasetParser.cpp  DatasetParser.hpp  HelperStructs.hpp  README.md  SubimageGenerator.cpp  SubimageGenerator.hpp  component_classification.py  create_dataset.py  cv.py  dataset.yml  generate_subimages.py  hough_circles.py  orb_detection.py  parse_dataset.py  parse_dataset_file.py  preprocessing_test.py
DatasetCreator/: CMakeLists.txt  DatasetCreator.cpp  DatasetCreator.hpp
build1/: CMakeCache.txt  Makefile  circuit_classifier  cmake_install.cmake  subimage_generator
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  subimage_generator
old/: orb_test.py
python/: component_classification.py  cv.py  generate_subimages.py  parse_dataset.py  preprocessing_test.py
